--- a/src/containers/Blog/Blog.module.css
+++ b/src/containers/Blog/Blog.module.css
@@ -12,12 +12,18 @@
     margin: 20px;
 }
 
+.listStyle{
+    list-style: none;
+}
+
 .Blog a{
     text-decoration: none;
     color: black;
 }
 
 .Blog a:hover, 
-.Blog a:active{
+.Blog a.active {
     color: #fa923f;
 }
+
+a.activeNavLink {color:#a00;}
